# Custom-PE-Packer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  inmemenc  inmemexec  inmemoryexec.c  inmemoryexec_encoder.c  insertal.c  reflective_loader.c  test.c
experiments/: custom_loader.c  decoder_stub.S  elf_encoder.c  elf_modifier.c  inetloader.c  libbfd_loader.c
linux/: inmemexec.c  inmemexec_encoder.c
src/: reflective_loader.c
windows/: packer.py  pe_packer.py  reflective_loader.c  test.c  test_loader.c  tmpfs_loader.c  win_inmemexec.c  xor_rc4_encoder.py
